--- a/html/_static/styles/furo-extensions.css
+++ b/html/_static/styles/furo-extensions.css
@@ -208,12 +208,12 @@ body {
 
 @media not print {
     body[data-theme=dark] {
-        --color-problematic: #ee5151;
+        /* --color-problematic: #ee5151;
         --color-foreground-primary: #ffffffcc;
         --color-foreground-secondary: #9ca0a5;
         --color-foreground-muted: #81868d;
         --color-foreground-border: #666;
-        --color-background-primary: #131416;
+        --color-background-primary: #383838;
         --color-background-secondary: #1a1c1e;
         --color-background-hover: #1e2124;
         --color-background-hover--transparent: #1e212400;
@@ -229,9 +229,9 @@ body {
         --color-api-keyword: var(--color-foreground-secondary);
         --color-highlight-on-target: #330;
         --color-admonition-background: #18181a;
-        --color-card-border: var(--color-background-secondary);
-        --color-card-background: #18181a;
-        --color-card-marginals-background: var(--color-background-hover)
+        --color-card-border: var(--color-background-secondary); */
+        --color-card-background: #383838;
+        /* --color-card-marginals-background: var(--color-background-hover) */
     }
 
     html body[data-theme=dark] .only-light {
@@ -293,7 +293,7 @@ body {
 }
 
 .sphinx-bs .card {
-    background-color: var( --color-background-primary);
+    background-color: var( --color-card-background);
     /* color: var(--color-foreground) */
 }
 
